--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [project]
 name = "hexlet-code"
 version = "0.1.0"
-description = "Add your description here"
+authors = "Viktor"
+description = "A set of games"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "prompt>=0.4.1",
+]
 
 [build-system]
 requires = ["hatchling"]
@@ -13,5 +16,18 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["brain_games"]
 
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.9",
+]
+
 [project.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:run"
+brain-calc = "brain_games.scripts.brain_calc:run"
+brain-gcd = "brain_games.scripts.brain_gcd:run"
+brain-progression = "brain_games.scripts.brain_progression:run"
+brain-prime = "brain_games.scripts.brain_prime:run"
+
+
