--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,11 @@
 [project]
-name = "hexlet-code"
+name = "brain-games"
 version = "0.1.0"
 authors = "Viktor"
-description = "A set of games"
+description = "A collection of games"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "prompt>=0.4.1",
-]
+dependencies = []
 
 [build-system]
 requires = ["hatchling"]
